tests/positive/basic/env_default/input.ci
void main() {
    print(getEnv("CIMPLE_SHOULD_NOT_EXIST", "fallback") + "\n");
}
