tests/negative/runtime/format_marker_mismatch/input.ci
void main() {
    print(format("{} {}", ["one"]) + "\n");
}
